# hawkeye

./: .gitignore  README.md  pyproject.toml
src/hawkeye/: __init__.py  analyzer.py  buffer.py  cli.py  filter.py  output.py  watcher.py
src/hawkeye/sources/: __init__.py  base.py  docker.py  file.py  stdin.py
