[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hawkeye-log"
version = "0.1.0"
description = "AI-powered log watcher that alerts you when something goes wrong"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["logs", "monitoring", "ai", "openai", "cli"]
authors = [
    { name = "Your Name", email = "you@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "watchfiles>=0.21.0",
    "docker>=7.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
heye = "hawkeye.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/hawkeye"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
